--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nasapi</title>
+    <title>NasAPI</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/png" href="https://nasa.github.io/nasawds-site/assets/img/favicons/favicon.png">
   </head>
   <body>
-    <div id='app'></div>
+    <div id='nasapi'></div>
   </body>
 </html>
