--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NasAPI</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" href="https://nasa.github.io/nasawds-site/assets/img/favicons/favicon.png">
+    <title>NasaPI - Discover Nasa's top photographs</title>
+    <link
+      href="http://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://nasa.github.io/nasawds-site/assets/img/favicons/favicon.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id='nasapi'></div>
+    <div id="nasapi"></div>
   </body>
 </html>
