--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>NasaPI - Discover Nasa's top photographs</title>
-    <link
-      href="http://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://nasa.github.io/nasawds-site/assets/img/favicons/favicon.png"
-    />
+    <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="https://nasa.github.io/nasawds-site/assets/img/favicons/favicon.png" />
+    <meta name="author" content="Juan D. Diaz" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="NasaPI" />
+    <meta name="description" content="Discover Nasa's top photographs" />
   </head>
   <body>
     <div id="nasapi"></div>
